whitespace potential fix

--- a/Website/WIP.css
+++ b/Website/WIP.css
@@ -1,9 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .top-banner{
     height:75vh;
     width: 100%;
-    margin:0;
-    padding:0;
-    vertical-align: baseline;
     display: flex;
     justify-content: center;
     background-color: black;
